--- a/doc/agile/v1/sprint_backlog_13.org
+++ b/doc/agile/v1/sprint_backlog_13.org
@@ -14,14 +14,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-19 Tue 15:25]
+#+CAPTION: Clock summary at [2019-03-19 Tue 15:30]
 | <75>                                                     |         |       |       |       |
 | Headline                                                 | Time    |       |       |     % |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                             | *58:52* |       |       | 100.0 |
+| *Total time*                                             | *58:56* |       |       | 100.0 |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                  | 58:52   |       |       | 100.0 |
-| Active                                                   |         | 58:52 |       | 100.0 |
+| Stories                                                  | 58:56   |       |       | 100.0 |
+| Active                                                   |         | 58:56 |       | 100.0 |
 | Edit release notes for previous sprint                   |         |       |  2:22 |   4.0 |
 | Sprint and product backlog grooming                      |         |       |  6:43 |  11.4 |
 | Create a video demo for the sprint's features            |         |       |  3:47 |   6.4 |
@@ -33,7 +33,7 @@
 | Changes to stitch templates are not reported correctly   |         |       |  1:09 |   2.0 |
 | Orchestration test is broken on Windows                  |         |       |  2:40 |   4.5 |
 | Code generation of tests for dogen models                |         |       | 23:08 |  39.3 |
-| Formatters have been incorrectly placed under extraction |         |       |  0:19 |   0.5 |
+| Formatters have been incorrectly placed under extraction |         |       |  0:23 |   0.7 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -850,8 +850,10 @@ we do nothing.
 If a project has tests (see story above) we should automatically
 ignore the test regular expressions.
 
-*** STARTED Formatters have been incorrectly placed under extraction  :story:
+*** COMPLETED Formatters have been incorrectly placed under extraction :story:
+    CLOSED: [2019-03-19 Tue 15:30]
     :LOGBOOK:
+    CLOCK: [2019-03-19 Tue 15:26]--[2019-03-19 Tue 15:30] =>  0:04
     CLOCK: [2019-03-19 Tue 15:06]--[2019-03-19 Tue 15:25] =>  0:19
     :END:
 
